<?xml version="1.0"?>
<package>
  <name>mytest</name>
  <version>1.0.0</version>
  <description>hz</description>
  <maintainer email="vovalekhterev@gmail.com">tndrd</maintainer>
  <author>tndrd</author>
  <license>Apache 2.0</license>
	
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
